--- a/Hippo/UIView/TableViewCell/IncomingImageCell/IncomingImageCell.xib
+++ b/Hippo/UIView/TableViewCell/IncomingImageCell/IncomingImageCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -37,7 +37,7 @@
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="XK5-3o-veN">
-                                <rect key="frame" x="5" y="255" width="337.5" height="33"/>
+                                <rect key="frame" x="5" y="255" width="337.5" height="125"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -83,7 +83,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
                             <constraint firstItem="pKf-tp-fym" firstAttribute="leading" secondItem="oyl-iR-nro" secondAttribute="leading" constant="5" id="0ot-9o-oT2"/>
-                            <constraint firstItem="eN1-nD-0vS" firstAttribute="top" relation="greaterThanOrEqual" secondItem="XK5-3o-veN" secondAttribute="bottom" constant="5" id="1jT-Yj-eYN"/>
+                            <constraint firstItem="eN1-nD-0vS" firstAttribute="top" secondItem="XK5-3o-veN" secondAttribute="bottom" constant="-8" id="1jT-Yj-eYN"/>
                             <constraint firstAttribute="trailing" secondItem="eN1-nD-0vS" secondAttribute="trailing" constant="5" id="2Vs-8o-027"/>
                             <constraint firstItem="pKf-tp-fym" firstAttribute="top" secondItem="oyl-iR-nro" secondAttribute="top" constant="5" id="FVa-dL-7mO"/>
                             <constraint firstItem="XK5-3o-veN" firstAttribute="trailing" secondItem="pKf-tp-fym" secondAttribute="trailing" id="GzA-KU-IUP"/>
@@ -157,7 +157,7 @@
                 <outlet property="timeLabel" destination="eN1-nD-0vS" id="5C8-Ga-Cyw"/>
                 <outlet property="topConstraint" destination="NVj-Bc-pxy" id="im2-xC-x3J"/>
             </connections>
-            <point key="canvasLocation" x="-230.40000000000001" y="20.689655172413794"/>
+            <point key="canvasLocation" x="-478" y="-29"/>
         </tableViewCell>
     </objects>
     <resources>
