--- a/Hippo/UIView/TableViewCell/OutgoingImageCell/OutgoingImageCell.xib
+++ b/Hippo/UIView/TableViewCell/OutgoingImageCell/OutgoingImageCell.xib
@@ -1,26 +1,26 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="375" id="gjV-D1-te3" customClass="OutgoingImageCell" customModule="Hippo" customModuleProvider="target">
-            <rect key="frame" x="0.0" y="0.0" width="400" height="375"/>
+        <tableViewCell contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" rowHeight="285" id="gjV-D1-te3" customClass="OutgoingImageCell" customModule="Hippo" customModuleProvider="target">
+            <rect key="frame" x="0.0" y="0.0" width="400" height="285"/>
             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
             <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="gjV-D1-te3" id="uxB-CL-jv8">
-                <rect key="frame" x="0.0" y="0.0" width="400" height="375"/>
+                <rect key="frame" x="0.0" y="0.0" width="400" height="285"/>
                 <autoresizingMask key="autoresizingMask"/>
                 <subviews>
                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="VYb-iU-vHb" customClass="So_UIView" customModule="Hippo" customModuleProvider="target">
-                        <rect key="frame" x="131" y="4.5" width="259.5" height="367"/>
+                        <rect key="frame" x="131" y="4.5" width="259.5" height="277"/>
                     </view>
                     <view clipsSubviews="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="QdQ-Gq-PhF" userLabel="MainContentView">
-                        <rect key="frame" x="131.5" y="5" width="258.5" height="366"/>
+                        <rect key="frame" x="131.5" y="5" width="258.5" height="276"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="2" translatesAutoresizingMaskIntoConstraints="NO" id="JE1-rU-Pid">
                                 <rect key="frame" x="5" y="5" width="248.5" height="250"/>
@@ -67,7 +67,7 @@
                                 </connections>
                             </button>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="ZsY-tZ-hkm" customClass="So_UIImageView" customModule="Hippo" customModuleProvider="target">
-                                <rect key="frame" x="105.5" y="159.5" width="47" height="47"/>
+                                <rect key="frame" x="105.5" y="114.5" width="47" height="47"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="47" id="B84-Xd-mSJ"/>
@@ -75,19 +75,19 @@
                                 </constraints>
                             </imageView>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="252" verticalCompressionResistancePriority="749" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="OsC-IF-XnT">
-                                <rect key="frame" x="207.5" y="349" width="26.5" height="12"/>
+                                <rect key="frame" x="207.5" y="247" width="26.5" height="24"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                 <color key="textColor" white="0.66666666669999997" alpha="1" colorSpace="calibratedWhite"/>
                                 <nil key="highlightedColor"/>
                             </label>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="readMsgTick" translatesAutoresizingMaskIntoConstraints="NO" id="7kV-sa-tMF" customClass="So_UIImageView" customModule="Hippo" customModuleProvider="target">
-                                <rect key="frame" x="236.5" y="349.5" width="17" height="11"/>
+                                <rect key="frame" x="236.5" y="253.5" width="17" height="11"/>
                             </imageView>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="OsC-IF-XnT" firstAttribute="top" relation="greaterThanOrEqual" secondItem="JE1-rU-Pid" secondAttribute="bottom" constant="5" id="1ep-U5-SaU"/>
+                            <constraint firstItem="OsC-IF-XnT" firstAttribute="top" secondItem="JE1-rU-Pid" secondAttribute="bottom" constant="-8" id="1ep-U5-SaU"/>
                             <constraint firstItem="tAd-0F-j2p" firstAttribute="bottom" secondItem="CRq-XN-0YY" secondAttribute="bottom" id="50C-EM-DsB"/>
                             <constraint firstItem="7kV-sa-tMF" firstAttribute="leading" secondItem="OsC-IF-XnT" secondAttribute="trailing" constant="2.5" id="77H-Z7-a3Y"/>
                             <constraint firstAttribute="trailing" secondItem="JE1-rU-Pid" secondAttribute="trailing" constant="5" id="C3N-dE-gkZ"/>
@@ -107,13 +107,13 @@
                         </constraints>
                     </view>
                     <imageView hidden="YES" userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="f5U-F9-OBc" userLabel="PropotionView">
-                        <rect key="frame" x="0.0" y="182.5" width="133.5" height="10"/>
+                        <rect key="frame" x="0.0" y="137.5" width="133.5" height="10"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="10" id="1uV-Wh-6VC"/>
                         </constraints>
                     </imageView>
                     <imageView userInteractionEnabled="NO" contentMode="center" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="7la-X3-Vfe">
-                        <rect key="frame" x="106.5" y="346" width="25" height="25"/>
+                        <rect key="frame" x="106.5" y="256" width="25" height="25"/>
                         <constraints>
                             <constraint firstAttribute="height" constant="25" id="7Rf-01-ebb"/>
                             <constraint firstAttribute="width" secondItem="7la-X3-Vfe" secondAttribute="height" multiplier="1:1" id="DGA-73-v7W"/>
@@ -150,7 +150,7 @@
                 <outlet property="timeLabel" destination="OsC-IF-XnT" id="ZDJ-GY-5fw"/>
                 <outlet property="topConstraint" destination="3YD-sR-Btx" id="zKd-56-vWe"/>
             </connections>
-            <point key="canvasLocation" x="173" y="105"/>
+            <point key="canvasLocation" x="172.80000000000001" y="64.31784107946028"/>
         </tableViewCell>
     </objects>
     <resources>
