--- a/Hippo/UIView/TableViewCell/IncomingImageCell/IncomingImageCell.xib
+++ b/Hippo/UIView/TableViewCell/IncomingImageCell/IncomingImageCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="20037" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES">
     <device id="retina4_7" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="20020"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
@@ -37,7 +37,7 @@
                                 </connections>
                             </button>
                             <textView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" scrollEnabled="NO" showsHorizontalScrollIndicator="NO" showsVerticalScrollIndicator="NO" editable="NO" textAlignment="natural" selectable="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0PB-Uv-swQ">
-                                <rect key="frame" x="5" y="255" width="337.5" height="33"/>
+                                <rect key="frame" x="5" y="255" width="337.5" height="125"/>
                                 <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="sentences"/>
@@ -89,7 +89,7 @@
                             <constraint firstItem="0PB-Uv-swQ" firstAttribute="trailing" secondItem="9Gn-Vo-MFI" secondAttribute="trailing" id="Fyt-t7-veB"/>
                             <constraint firstItem="p3z-2E-EAP" firstAttribute="top" secondItem="9Gn-Vo-MFI" secondAttribute="top" id="GJw-IF-kjG"/>
                             <constraint firstItem="0PB-Uv-swQ" firstAttribute="top" secondItem="9Gn-Vo-MFI" secondAttribute="bottom" id="NOt-18-z2h"/>
-                            <constraint firstItem="qyD-Jc-3vo" firstAttribute="top" relation="greaterThanOrEqual" secondItem="0PB-Uv-swQ" secondAttribute="bottom" constant="5" id="OP7-dj-f68"/>
+                            <constraint firstItem="qyD-Jc-3vo" firstAttribute="top" secondItem="0PB-Uv-swQ" secondAttribute="bottom" constant="-8" id="OP7-dj-f68"/>
                             <constraint firstItem="9Gn-Vo-MFI" firstAttribute="top" secondItem="Lb1-RR-sAn" secondAttribute="top" constant="5" id="WTO-wK-NXa"/>
                             <constraint firstItem="9Gn-Vo-MFI" firstAttribute="leading" secondItem="Lb1-RR-sAn" secondAttribute="leading" constant="5" id="ZI2-Y8-NfB"/>
                             <constraint firstItem="c1Z-pb-Ggj" firstAttribute="centerY" secondItem="9Gn-Vo-MFI" secondAttribute="centerY" id="cOl-MR-GDI"/>
