--- a/Hippo/FuguUnique.storyboard
+++ b/Hippo/FuguUnique.storyboard
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vAr-Qq-z1C">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21701" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="vAr-Qq-z1C">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21679"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
         <capability name="collection view cell content view" minToolsVersion="11.0"/>
@@ -1220,6 +1220,7 @@
                                     <constraint firstItem="JIA-bQ-6Q1" firstAttribute="leading" secondItem="5wO-zE-y4K" secondAttribute="leading" id="LxZ-1t-V2c"/>
                                     <constraint firstAttribute="bottom" secondItem="bsk-G0-oNk" secondAttribute="bottom" id="NsQ-wl-HCf"/>
                                     <constraint firstItem="FQc-qg-FUN" firstAttribute="trailing" secondItem="5wO-zE-y4K" secondAttribute="trailing" id="WLX-UG-6kd"/>
+                                    <constraint firstItem="5wO-zE-y4K" firstAttribute="centerY" secondItem="HOO-xV-gYe" secondAttribute="centerY" id="WSP-QC-ZK5"/>
                                     <constraint firstItem="Nvq-jc-yaa" firstAttribute="top" secondItem="HOO-xV-gYe" secondAttribute="top" id="ZF7-xT-aXL"/>
                                     <constraint firstAttribute="trailing" secondItem="Nvq-jc-yaa" secondAttribute="trailing" id="amc-KI-0N8"/>
                                     <constraint firstItem="FQc-qg-FUN" firstAttribute="leading" secondItem="5wO-zE-y4K" secondAttribute="leading" constant="5" id="eEz-F8-yKP"/>
@@ -1228,6 +1229,23 @@
                                     <constraint firstItem="bsk-G0-oNk" firstAttribute="top" secondItem="HOO-xV-gYe" secondAttribute="top" id="gMy-v5-ejf"/>
                                     <constraint firstAttribute="bottom" secondItem="5wO-zE-y4K" secondAttribute="bottom" constant="3" id="k2x-cM-F5N"/>
                                     <constraint firstItem="FQc-qg-FUN" firstAttribute="centerY" secondItem="5wO-zE-y4K" secondAttribute="centerY" id="vFt-K7-aVp"/>
+                                </constraints>
+                            </view>
+                            <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="L3E-Mq-aC4">
+                                <rect key="frame" x="0.0" y="806" width="414" height="56"/>
+                                <subviews>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Please select an option" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="sQY-Rd-fGe">
+                                        <rect key="frame" x="119" y="18" width="176" height="20.5"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                        <color key="textColor" systemColor="systemGreenColor"/>
+                                        <nil key="highlightedColor"/>
+                                    </label>
+                                </subviews>
+                                <color key="backgroundColor" systemColor="systemGray6Color"/>
+                                <constraints>
+                                    <constraint firstItem="sQY-Rd-fGe" firstAttribute="centerX" secondItem="L3E-Mq-aC4" secondAttribute="centerX" id="6oH-wE-CXY"/>
+                                    <constraint firstAttribute="height" constant="56" id="DT5-RS-QPp"/>
+                                    <constraint firstItem="sQY-Rd-fGe" firstAttribute="centerY" secondItem="L3E-Mq-aC4" secondAttribute="centerY" id="PCD-1o-sTk"/>
                                 </constraints>
                             </view>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="qaz-sc-1L7" customClass="NavigationBarChat" customModule="Hippo" customModuleProvider="target">
@@ -1478,6 +1496,7 @@
                             <constraint firstAttribute="trailing" secondItem="lda-ny-CUc" secondAttribute="trailing" id="Of6-8e-Vxf"/>
                             <constraint firstAttribute="trailing" secondItem="wqZ-OS-hnt" secondAttribute="trailing" id="SNL-Sz-zAO"/>
                             <constraint firstItem="cvX-d1-Pra" firstAttribute="top" secondItem="qaz-sc-1L7" secondAttribute="bottom" id="TKX-fM-kEc"/>
+                            <constraint firstItem="L3E-Mq-aC4" firstAttribute="top" secondItem="WCe-q2-yvR" secondAttribute="bottom" id="YuN-Hd-hCY"/>
                             <constraint firstItem="Fld-6h-IW2" firstAttribute="centerX" secondItem="S9M-dE-hY2" secondAttribute="centerX" id="ZfD-u8-cim"/>
                             <constraint firstItem="7N2-B4-4Ya" firstAttribute="leading" secondItem="S9M-dE-hY2" secondAttribute="leading" id="cF8-fU-Lt6"/>
                             <constraint firstItem="WCe-q2-yvR" firstAttribute="leading" secondItem="S9M-dE-hY2" secondAttribute="leading" id="diR-LS-wZJ"/>
@@ -1488,15 +1507,23 @@
                             <constraint firstItem="cvX-d1-Pra" firstAttribute="width" secondItem="S9M-dE-hY2" secondAttribute="width" id="kye-QF-Y9C"/>
                             <constraint firstItem="jyg-ET-R2Q" firstAttribute="centerY" secondItem="S9M-dE-hY2" secondAttribute="centerY" id="mna-nM-ETj"/>
                             <constraint firstItem="HOO-xV-gYe" firstAttribute="top" secondItem="7N2-B4-4Ya" secondAttribute="bottom" id="nOe-og-Fab"/>
+                            <constraint firstAttribute="trailing" secondItem="L3E-Mq-aC4" secondAttribute="trailing" id="nUS-RR-Dcc"/>
+                            <constraint firstItem="L3E-Mq-aC4" firstAttribute="leading" secondItem="S9M-dE-hY2" secondAttribute="leading" id="p56-be-Ebd"/>
                             <constraint firstItem="qaz-sc-1L7" firstAttribute="leading" secondItem="S9M-dE-hY2" secondAttribute="leading" id="rbq-vX-bvt"/>
                             <constraint firstItem="cvX-d1-Pra" firstAttribute="leading" secondItem="S9M-dE-hY2" secondAttribute="leading" id="sXy-fo-eam"/>
                             <constraint firstAttribute="trailing" secondItem="qaz-sc-1L7" secondAttribute="trailing" id="tCL-6E-BOG"/>
                             <constraint firstItem="Uir-cP-cEo" firstAttribute="top" secondItem="cvX-d1-Pra" secondAttribute="bottom" id="vdi-Of-zzN"/>
+                            <constraint firstItem="RGg-5g-pcZ" firstAttribute="top" secondItem="L3E-Mq-aC4" secondAttribute="bottom" id="wel-md-U4o"/>
                             <constraint firstItem="jyg-ET-R2Q" firstAttribute="top" secondItem="rGI-UZ-sV0" secondAttribute="bottom" id="xZw-fG-Tgs"/>
                             <constraint firstItem="RGg-5g-pcZ" firstAttribute="top" secondItem="HOO-xV-gYe" secondAttribute="bottom" id="xs9-J1-xKA"/>
                             <constraint firstItem="Gv8-tp-tsC" firstAttribute="top" secondItem="RGg-5g-pcZ" secondAttribute="bottom" id="xwQ-NB-tpn"/>
                             <constraint firstItem="lda-ny-CUc" firstAttribute="bottom" secondItem="wqZ-OS-hnt" secondAttribute="bottom" id="yyF-6D-fYy"/>
                         </constraints>
+                        <variation key="default">
+                            <mask key="subviews">
+                                <exclude reference="L3E-Mq-aC4"/>
+                            </mask>
+                        </variation>
                     </view>
                     <toolbarItems/>
                     <simulatedNavigationBarMetrics key="simulatedTopBarMetrics" prompted="NO"/>
@@ -1525,6 +1552,8 @@
                         <outlet property="newConversationLabel" destination="hbE-JQ-d7g" id="Jok-B8-6aY"/>
                         <outlet property="newConversationShadow" destination="rzh-UV-rWK" id="egw-ie-5mQ"/>
                         <outlet property="placeHolderLabel" destination="FQc-qg-FUN" id="ik7-HR-MeY"/>
+                        <outlet property="pleaseSelectOptionLabel" destination="sQY-Rd-fGe" id="GMB-Cq-kE7"/>
+                        <outlet property="pleaseSelectOptionView" destination="L3E-Mq-aC4" id="IUp-a4-CdT"/>
                         <outlet property="retryLabelView" destination="Uir-cP-cEo" id="9Ny-1f-JhC"/>
                         <outlet property="retryLabelViewHeight" destination="XQo-J3-tzt" id="hgz-Ue-DJO"/>
                         <outlet property="retryLoader" destination="deC-Oh-OPD" id="Kgz-KA-JXo"/>
@@ -1541,7 +1570,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="PpZ-wt-1uB" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="807" y="18"/>
+            <point key="canvasLocation" x="805.79710144927537" y="17.410714285714285"/>
         </scene>
         <!--Select Image View Controller-->
         <scene sceneID="eyY-oJ-Kkw">
@@ -2834,6 +2863,12 @@
         <image name="whiteBackButton" width="8" height="12"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
+        <systemColor name="systemGray6Color">
+            <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemGreenColor">
+            <color red="0.20392156862745098" green="0.7803921568627451" blue="0.34901960784313724" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemOrangeColor">
             <color red="1" green="0.58431372549019611" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
